   * BUFR (edition 3) mostly works
  geoloc
   * Add RotatedPole projection
  ft
   * Point Feature Types completely reworked, based on StructureData iterators
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan

 Libraries
  * JDOM 1.1
  * use new visad library 12/04/07

 Release Details:
    16: remove direct use of ucar.units, except from ucar.nc2.units
    15: change StringBuffer to StringBuilder for efficiency
        clean up ArrayStructure/StructureData API, clarify Member use
        StructureData.getScalarXXX(name) must be correct type
        cleanup javadoc, improve reference docs
        NetcdfFileWriteable - redefine mode, large file support, extra header bytes
        library upgrades : JDOM 1.1
        NetcdfFile.readSection(secSpec) used in NcDumpPanel, replaces old readNestedData.
    14: NetcdfDataset: unsigned always gets converted
        Netcdf-3 files: truncate Strings at first null byte.
        complete rework of point datatypes, now in package ucar.nc2.ft (feature types)
        many improvements to Structure, ArrayStructure etc
        rewrite BUFR and supporting library, improve tables, etc
        make sure compiles under 1.5
    13: hdf4 attribute arrays
    12: DODS preload
        put back HttpClientManager, RuntimeConfigParser temporarily (testing with IDV)
        hdf4 bug fixes
        experiment with ucar.nc2.dt2
        iosp.NmcObsLegacy
        DataType Sequence
    11: start to fix name/shortName, ie deal with Groups systematically
        Structure/ArrayStructure/StructureData refactor
    10: hdf4 bug fix - no data tag, use missing data
        Structure.subset(), nc3 optimizes for it
        hdf5, ArrayStructureBB : set byteOrder
        ArrayStructureBB puts Strings on "heap"
        rearrange packages to separate modules
        cdm build redone - xxxComplete.jar added
        fix problem preventing 1.5 compilation (ternary op returns array)