@@ -40,6 +40,8 @@ This code is ALPHA
 
  Release Details:
     16: remove direct use of ucar.units, except from ucar.nc2.units
+        rewrite NetcdfFileCache, remove NetcdfDatasetCache
+        EnhanceScaleMissingImpl uses Misc.closeEnough for missing value comparisions.
     15: change StringBuffer to StringBuilder for efficiency
         clean up ArrayStructure/StructureData API, clarify Member use
         StructureData.getScalarXXX(name) must be correct type
